--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.54.9",
     "web-vitals": "^2.1.4"
   },
