--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-phone-number-input": "^3.2.12",
     "react-remove-scroll": "^2.5.5",
     "react-router-dom": "^6.4.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "react-transition-group": "^4.4.5",
