--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-switch": "^7.0.0",
     "react-transition-group": "^4.4.5",
     "sass": "^1.54.9",
+    "smoothscroll-polyfill": "^0.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
