--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-focus-lock": "^2.9.2",
     "react-phone-number-input": "^3.2.12",
     "react-remove-scroll": "^2.5.5",
     "react-router-dom": "^6.4.0",
